[gd_scene load_steps=2 format=3 uid="uid://caq7agcqkvqy4"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_ion4v"]

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ion4v")

[node name="ResultText" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ResultText"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -30.0
offset_top = 56.0
offset_right = 30.0
offset_bottom = 144.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "
"

[node name="PauseMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -152.0
offset_right = 100.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0730591, 0.278855, 0.519531, 1)

[node name="Resume" type="Button" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -79.0
offset_right = 35.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
text = "Resume"

[node name="Quit" type="Button" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = 46.0
offset_right = 6.0
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit"

[node name="Restart" type="Button" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -15.0
offset_right = 29.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
text = "Restart"

[connection signal="button_up" from="PauseMenu/Resume" to="." method="_on_resume_button_up"]
[connection signal="button_up" from="PauseMenu/Quit" to="." method="_on_quit_button_up"]
[connection signal="button_up" from="PauseMenu/Restart" to="." method="_on_restart_button_up"]
